--- a/device-catalog.html
+++ b/device-catalog.html
@@ -6,9 +6,11 @@
     </head>
     <body>
         <header class="header">
-            <div class="container">
-                <div class="logo">
-                    <p class="logo-top">DEVICE</p>
+            <div class="container">                
+                <div class="logo-top">
+                    <p class="logo-top">
+                        <a href="device-index.html"></a>
+                    </p>
                 </div>
                 <nav class="navigation">
                     <div class="navigation-top">
@@ -21,7 +23,7 @@
                             </form>
                         </div> 
                         <div class="enter">
-                            <a href="#">Войти</a>                                
+                            <a href="#">Войти</a>                            
                         </div> 
                         <div class="compare">
                             <button class="btn compare" type="submit">Сравнить</button> 
@@ -36,7 +38,7 @@
                             <div class="drop-down-title">
                                 <a href=#>Каталог товаров</a> 
                             </div>
-                            <div class="drop-down-content">
+                            <div class="drop-down-content"
                                 <ul class="drop-down-list">
                                     <li class="drop-down-item">
                                         <a href="#">Виртуальная реальность</a>
@@ -58,7 +60,7 @@
                                     </li>
                                 </ul>
                             </div> 
-                        </div>
+                        </div>    
                         <div class="delivery">
                             <a href="#">Доставка</a>
                         </div>
@@ -67,126 +69,105 @@
                         </div>
                         <div class="contacts">
                             <a href="#">Контакты</a>
-                        </div>
+                        </div>                        
                     </div>  
                 </nav>
             </div>          
         </header>
 
         <main class="container">
-            <!--здесь будет слайдер-->
-            <div class="product-section">
-                <ul class="product-section-list">
-                    <li class="product-section-item">
-                        <figure>
-                            <a href="#">
-                                <img src="#" alt="virtual reality">
-                                <figcaption>Виртуальная реальность</figcaption>
-                            </a>     
-                        </figure>
-                    </li>
-                    <li class="product-section-item">
-                        <figure>
-                             <a href="#">
-                                <img src="#" alt="selfy monopods">
-                                <figcaption>Моноподы для селфи</figcaption>  
-                            </a>
-                        </figure>
-                    </li>
-                    <li class="product-section-item">
-                        <figure>
-                            <a href="#">
-                                <img src="#" alt="action-cameras">
-                                <figcaption>Экшн-камеры</figcaption>    
-                            </a>                                  
-                        </figure>
-                    </li>
-                    <li class="product-section-item">
-                        <figure>
-                            <a href="#">
-                                <img src="#" alt="fitnes-trackers">
-                                <figcaption>Фитнес-браслеты</figcaption>   
-                            </a>     
-                        </figure>
-                    </li>
-                    <li class="product-section-item">
-                        <figure>
-                            <a href="#">
-                                <img src="#" alt="smart-watches">             
-                                <figcaption>Умные часы</figcaption>
-                            </a>             
-                        </figure>
-                    </li>
-                    <li class="product-section-item">
-                        <figure>
-                            <a href="#">
-                                <img src="#" alt="quadrocopter"> 
-                                <figcaption>Квадрокоптеры</figcaption> 
-                            <a/>         
-                        </figure>
-                    </li>                    
-                </ul>
-            </div>
-            <!-- Здесь слайдер-->
-            <article class="partners">
-                <ul class="partners-list">
-                    <li class="partners-item">
-                        <figure>
-                            <img src="#" alt="dji" width="30">                   
-                        </figure>                       
-                    </li>
-                    <li class="partners-item">
-                        <figure>
-                            <img src="#" alt="spgadgets" width="30">              
-                        </figure>   
-                    </li>
-                    <li class="partners-item">
-                        <figure>
-                            <img src="#" alt="gopro" width="30">                  
-                        </figure>    
-                    </li>
-                    <li class="partners-item">
-                        <figure>
-                            <img src="#" alt="vive" width="30">                   
-                        </figure>    
-                    </li>
-                </ul>
-            </article>
-
-            <article class="info">
-                <div class="info-left">
-                    <h2 class="info_title">О нас</h2>
-                    <div class="info">
-                        <p>0громный выбор гаджетов не оставит равнодушным гика,<br> который есть в каждом из нас.</p>
-                        <p>Мы можем доставить ваш товар в самые отдаленные точки<br>
-                        России! DEVICE работает со многими транспортными компаниями.</p>
+            <ul class="monopod-breadcrumbs">
+                <li>
+                    <a href="device-index.html">Главная</a>    
+                </li>
+                <li>
+                    <a href="#">Каталог товаров</a>
+                </li>
+                <li>
+                    <a href="#">Моноподы для селфи</a>
+                </li>
+            </ul>
+            <div class="content">
+                <div class="content-left">
+                    <div class="monopod-filter">
+                        <form action="#" method="get">
+                            <h2>Цвет:</h2> 
+                            <label>
+                                <input type="checkbox" name="filter-item" value="black" checked>Черный
+                            </label>  
+                            <label>
+                                <input type="checkbox" name="filter-item" value="white">Белый
+                            </label>
+                            <label>
+                                <input type="checkbox" name="filter-item" value="blue" checked>Синий
+                            </label>
+                            <label>
+                                <input type="checkbox" name="filter-item" value="red" checked>Красный
+                            </label>
+                            <label>
+                                <input type="checkbox" name="filter-item" value="pink">Розовый
+                            </label>
+                            <hr>
+                            <h2>Bluetooth</h2>
+                            <label>
+                                <input type="radio" name="radio-filter-item" value="yes-bluetooth" checked>Есть
+                            </label>
+                            <label>
+                                <input type="radio" name="radio-filter-item" value="no-bluetooth">Нет
+                            </label>
+                            <button type="submit" class="btn result">ПОКАЗАТЬ</button>
+                        </form>           
                     </div>
-                    <ul class="transport-line">
-                        <li class="transport-line-item">Деловые линии</li>
-                        <li class="transport-line-item">Автотрейдинг</li>
-                        <li class="transport-line-item">ЖелДорЭкспедиция</li>     
-                    </ul>
-                    <a class="btn" href="#">ПОДРОБНЕЕ О НАС</a>
+                <div class="content-right">
+                    <div class="monopod-content">
+                        <article class="monopod-item">
+                            <img src="#" alt="Любительская селфи-палка"> 
+                            <span class="monopod-price">500 РУБ.</span>                
+                        </article> 
+                        <article class="monopod-item">
+                            <span class="monopod-price">1 500 РУБ.</span>                
+                        </article> 
+                        <article class="monopod-item">
+                            <img src="#" alt="Непотопляемая селфи-палка"> 
+                            <span class="monopod-price">2 500 РУБ.</span>                
+                        </article> 
+                        <article class="monopod-item">
+                            <img src="#" alt="Селфи-палка «Следуй за мной»"> 
+                            <span class="monopod-price">2 500 РУБ.</span>                
+                        </article>                        
+                    </div>
+                    <div class="content-selection">
+                            <div class="selection-pre">
+                                <a href="#">НАЗАД</a>
+                            </div>
+                            <div class="selection-pages">
+                                <ul class="pages-list">
+                                    <li class="pages-item">
+                                        <a href="#">1</a>
+                                    </li>
+                                    <li class="pages-item">
+                                        <a href="#">2</a>
+                                    </li>
+                                    <li class="pages-item">
+                                        <a href="#">3</a>
+                                    </li>
+                                </ul>                            
+                            </div>
+                            <div class="selection-next">
+                                <a href="#">ВПЕРЕД</a>
+                            </div>
+                        </div>
+                    </div>    
                 </div>
-            </article>
-                
-            <div class="info-right">
-                <h2 class="info_title">Контакты</h2>
-                <div class="info">
-                    <p>Вы можете забрать свой товар сами, заехав в наш офис. Заодно, вы сможете
-                    <br> проверить работоспособность покупок. Всякое бывает.</p>                
-                </div>
-                <a class="map" href="#" title="maps" target="blank">
-                    <img src="#" width="#" alt="Карта проезда">
-                </a>                    
-                <a class="btn" href="#">НАПИШИТЕ НАМ</a>
-            </div>                   
+            </div>
         </main>
 
         <footer class="footer">
             <div class="container">
-                <section class="footer-left">
-                    <p class="logo-bottom">DEVICE</p>
+                <section class="footer-left">                
+                    <p>
+                        <a class="logo-link" href="device-index.html">DEVICE</a>   
+                    </p>
                     <p class="addres">г.Москва, ул. Строителей, 15</p>
                     <span class="line"></span>
                 </section>
