--- a/device-catalog.html
+++ b/device-catalog.html
@@ -122,21 +122,35 @@
                     <div class="monopod-content">
                         <article class="monopod-item">
                             <img src="#" alt="Любительская селфи-палка"> 
+                            <p>
+                               <a class="monopod-link" href="#">Любительская селфи-палка</a> 
+                            </p>                            
                             <span class="monopod-price">500 РУБ.</span>                
                         </article> 
                         <article class="monopod-item">
+                            <img src="#" alt="Профессиональная селфи-палка">
+                            <p>
+                                <a class="monopod-link" href="#">Профессиональная селфи-палка</a>   
+                            </p>                             
                             <span class="monopod-price">1 500 РУБ.</span>                
                         </article> 
                         <article class="monopod-item">
                             <img src="#" alt="Непотопляемая селфи-палка"> 
+                            <p>
+                                <a class="monopod-link" href="#">Непотопляемая селфи-палка</a>
+                            </p>                                
                             <span class="monopod-price">2 500 РУБ.</span>                
                         </article> 
                         <article class="monopod-item">
                             <img src="#" alt="Селфи-палка «Следуй за мной»"> 
+                            <p>
+                                <a class="monopod-link" href="#">Селфи-палка «Следуй за мной»</a>    
+                            </p>                            
                             <span class="monopod-price">2 500 РУБ.</span>                
                         </article>                        
                     </div>
                     <div class="content-selection">
+                        <div class="selection"></div>
                             <div class="selection-pre">
                                 <a href="#">НАЗАД</a>
                             </div>
