Подключение контентных изображений DEVICE

--- a/device-catalog.html
+++ b/device-catalog.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>HTML Academy:DEVICE</title>
-        <meta charset="utf-8">        
+        <meta charset="utf-8">  
+        <link href="css/device_style.css" rel="stylesheet">       
     </head>
     <body>
         <div class="container">
@@ -153,7 +154,7 @@
                             <article class="monopod-item">                       
                                 <div class="new">NEW</div>                          
                                 <div class="monopod-item-photo">
-                                    <img src="#" alt="Любительская селфи-палка">                        
+                                    <img src="img/item-1.jpg" alt="Любительская селфи-палка" width="360" height="380">               
                                 </div>
                                 <div class="add-link">
                                         <a class="add-link-basket" href="#">В КОРЗИНУ</a>
@@ -168,14 +169,14 @@
                             <article class="monopod-item">
                                 <div class="new">NEW</div>
                                 <div class="monopod-item-photo">
-                                    <img src="#" alt="Профессиональная селфи-палка">                                
+                                    <img src="img/item-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">                                
                                 </div>
                                 <div class="add-link">
                                         <a class="add-link-basket" href="#">В КОРЗИНУ</a>
                                         <a class="add-link-compare" href="#">Добавить к сравнению</a>
                                 </div>                                                                                           
                                 <div class="monopod-item-info">
-                                    <a class="monopod-link" href="#">Профессиональная селфи-палка</a>                                                         
+                                    <a class="monopod-link" href="#">Профессиональная селфи-палка</a>                                            
                                     <span class="monopod-price">1 500 РУБ.</span> 
                                 </div>               
                             </article>
@@ -183,14 +184,14 @@
                             <article class="monopod-item">
                                 <div class="new">NEW</div>
                                 <div class="monopod-item-photo">
-                                    <img src="#" alt="Непотопляемая селфи-палка">                                                                                             
+                                    <img src="img/item-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">                                                                                             
                                 </div> 
                                 <div class="add-link">
                                         <a class="add-link-basket" href="#">В КОРЗИНУ</a>
                                         <a class="add-link-compare" href="#">Добавить к сравнению</a>
                                 </div>                              
                                 <div class="monopod-item-info">
-                                    <a class="monopod-link" href="#">Непотопляемая селфи-палка</a>                                                            
+                                    <a class="monopod-link" href="#">Непотопляемая селфи-палка</a>                                                         
                                     <span class="monopod-price">2 500 РУБ.</span>    
                                 </div>            
                             </article>
@@ -198,7 +199,7 @@
                             <article class="monopod-item">
                                 <div class="new">NEW</div>
                                 <div class="monopod-item-photo">
-                                    <img src="#" alt="Селфи-палка «Следуй за мной»">                                
+                                    <img src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">                                
                                 </div>
                                 <div class="add-link">
                                         <a class="add-link-basket" href="#">В КОРЗИНУ</a>
@@ -270,7 +271,7 @@
                     <a class="social-btn social-btn-fb" href="#"></a>
                     <a class="social-btn social-btn-ins" href="#"></a>  
                     <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
-                        <img src="#" alt="htmlacademy.ru" width="20px">
+                        <img src="img/htmlacademy.png" alt="htmlacademy.ru" width="27px" height="34">
                     </a>                    
                 </section>
             </div>                               
