--- a/device-index.html
+++ b/device-index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>HTML Academy:DEVICE</title>
-        <meta charset="utf-8">        
+        <meta charset="utf-8"> 
+        <link href="css/device_style.css" rel="stylesheet">       
     </head>
     <body>
         <div class="container">
@@ -77,8 +78,7 @@
                     <li class="product-section-item">
                         <figure>
                             <a href="#">
-                                <img src="#" alt="virtual reality">
-
+                                <img src="img/popular-1.png" alt="virtual reality" width="97" height="55">
                                 <figcaption>Виртуальная реальность</figcaption>
                             </a>     
                         </figure>
@@ -86,7 +86,7 @@
                     <li class="product-section-item">
                         <figure>
                              <a href="#">
-                                <img src="#" alt="selfy monopods">
+                                <img src="img/popular-2.png" alt="selfy monopods" width="86" height="117">                                
                                 <figcaption>Моноподы для селфи</figcaption>  
                             </a>
                         </figure>
@@ -94,7 +94,7 @@
                     <li class="product-section-item">
                         <figure>
                             <a href="#">
-                                <img src="#" alt="action-cameras">
+                                <img src="img/popular-3.png" alt="action-cameras" width="71" height="87"> 
                                 <figcaption>Экшн-камеры</figcaption>    
                             </a>                                  
                         </figure>
@@ -102,7 +102,7 @@
                     <li class="product-section-item">
                         <figure>
                             <a href="#">
-                                <img src="#" alt="fitnes-trackers">
+                                <img src="img/popular-4.png" alt="fitnes-trackers" width="106" height="65">
                                 <figcaption>Фитнес-браслеты</figcaption>   
                             </a>     
                         </figure>
@@ -110,7 +110,7 @@
                     <li class="product-section-item">
                         <figure>
                             <a href="#">
-                                <img src="#" alt="smart-watches">             
+                                <img src="img/popular-5.png" alt="smart-watches" width="56" height="98">             
                                 <figcaption>Умные часы</figcaption>
                             </a>             
                         </figure>
@@ -118,7 +118,7 @@
                     <li class="product-section-item">
                         <figure>
                             <a href="#">
-                                <img src="#" alt="quadrocopter"> 
+                                <img src="img/popular-6.png" alt="quadrocopter" width="132" height="69"> 
                                 <figcaption>Квадрокоптеры</figcaption> 
                             <a/>         
                         </figure>
@@ -129,16 +129,24 @@
                 <section class="partners">
                     <ul class="partners-list">
                         <li class="partners-item">                        
-                            <a href="#"></a>                                      
+                            <a href="#" target="_blank">
+                                <img src="img/logo-1.png" alt="dji" width="260" height="100">
+                            </a>                                      
                         </li>
                         <li class="partners-item">
-                            <a href="#"></a>
+                            <a href="#" target="_blank">
+                                <img src="img/logo-2.png" alt="sp-gadgets" width="260" height="100">
+                            </a>
                         </li>
                         <li class="partners-item">
-                            <a href="#"></a>                         
+                            <a href="#" target="_blank">
+                                <img src="img/logo-3.png" alt="go-pro" width="260" height="100">
+                            </a>                         
                         </li>
                         <li class="partners-item">
-                            <a href="#"></a>  
+                            <a href="#" target="_blank">
+                                <img src="img/logo-4.png" alt="vive" width="260" height="100">
+                            </a>  
                         </li>
                     </ul>
                 </div>
@@ -161,7 +169,7 @@
                      проверить работоспособность покупок. Всякое бывает.</p>               
                     <div class="map">
                         <a class="map" href="#" title="maps" target="blank">                
-                            <img src="#" width="#" alt="Карта проезда">
+                            <img src="img/map.png" width="560" height="222" alt="Карта проезда">
                         </a>
                     </div>                                    
                     <a class="btn" href="#">НАПИШИТЕ НАМ</a>
@@ -173,7 +181,7 @@
         <footer class="footer"> 
             <div class="container">                      
                 <section class="footer-first-line">                     
-                    <a class="logo-link" href="device-index.html">DEVICE</a>   
+                    <a class="logo-link">DEVICE</a>   
                     <ul class="footer-navigation-list">
                             <li class="footer-enter">
                                 <a href="#">Войти</a>
@@ -206,7 +214,9 @@
                     <a class="social-btn social-btn-vk" href="#"></a>
                     <a class="social-btn social-btn-fb" href="#"></a>
                     <a class="social-btn social-btn-ins" href="#"></a>  
-                    <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss"></a>                    
+                    <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
+                        <img src="img/htmlacademy.png" alt="htmlacademy.ru" width="27px" height="34">
+                    </a>       
                 </section>
             </div>
         </footer>       
