Добавление normalize.css

--- a/device-index.html
+++ b/device-index.html
@@ -3,7 +3,8 @@
     <head>
         <title>HTML Academy:DEVICE</title>
         <meta charset="utf-8"> 
-        <link href="css/device_style.css" rel="stylesheet">       
+        <link href="css/device_style.css" rel="stylesheet">
+        <link href="css/device_normalize.css" rel="stylesheet">       
     </head>
     <body>
         <div class="container">
