Добавлены img, изменен .css

--- a/device-catalog.html
+++ b/device-catalog.html
@@ -74,7 +74,7 @@
             </header>
 
             <main>        
-                <h1>Моноподы для селфи</h1>
+                <h1 class="page-title">Моноподы для селфи</h1>
                 <ul class="monopod-breadcrumbs">
                     <li>
                         <a href="device-index.html">Главная</a>    
