--- a/device-index.html
+++ b/device-index.html
@@ -18,9 +18,8 @@
                             <input type="search" name="search" placeholder="Поиск по сайту">
                             <input type="submit" value="Найти">               
                         </form>                         
-                        <div class="user-info">
-                            <a href="#">Валентин Петухов</a>
-                            <a href="#">Выйти</a>                            
+                        <div class="user-info">                            
+                            <a href="#">Войти</a>                            
                         </div> 
                         <div class="compare">
                             <a class="btn-compare" href="#">Сравнить</a>                            
@@ -111,7 +110,7 @@
                     <li class="product-section-item">
                         <figure>
                             <a href="#">
-                                <img src="img/popular-5.png" alt="smart-watches" width="56" height="98">             
+                                <img src="img/popular-5.png" alt="smart-watches" width="56" height="98">           
                                 <figcaption>Умные часы</figcaption>
                             </a>             
                         </figure>
@@ -152,7 +151,7 @@
                     </ul>
                 </div>
                 <div class="info-left">
-                    <h2 class="info_title">О нас</h2>
+                    <h2 class="info-title">О нас</h2>
                     <p>0громный выбор гаджетов не оставит равнодушным гика,
                     который есть в каждом из нас.</p>
                     <p>Мы можем доставить ваш товар в самые отдаленные точки
@@ -165,7 +164,7 @@
                     <a class="btn" href="#">ПОДРОБНЕЕ О НАС</a>
                 </div>               
                 <div class="info-right">
-                    <h2 class="info_title">Контакты</h2>               
+                    <h2 class="info-title">Контакты</h2>               
                     <p>Вы можете забрать свой товар сами, заехав в наш офис. Заодно, вы сможете
                      проверить работоспособность покупок. Всякое бывает.</p>               
                     <div class="map">
