--- a/device-index.html
+++ b/device-index.html
@@ -130,22 +130,22 @@
                     <ul class="partners-list">
                         <li class="partners-item">                        
                             <a href="#" target="_blank">
-                                <img src="img/logo-1.png" alt="dji" width="260" height="100">
+                                <img src="img/logo-1.jpg" alt="dji" width="260" height="100">
                             </a>                                      
                         </li>
                         <li class="partners-item">
                             <a href="#" target="_blank">
-                                <img src="img/logo-2.png" alt="sp-gadgets" width="260" height="100">
+                                <img src="img/logo-2.jpg" alt="sp-gadgets" width="260" height="100">
                             </a>
                         </li>
                         <li class="partners-item">
                             <a href="#" target="_blank">
-                                <img src="img/logo-3.png" alt="go-pro" width="260" height="100">
+                                <img src="img/logo-3.jpg" alt="go-pro" width="260" height="100">
                             </a>                         
                         </li>
                         <li class="partners-item">
                             <a href="#" target="_blank">
-                                <img src="img/logo-4.png" alt="vive" width="260" height="100">
+                                <img src="img/logo-4.jpg" alt="vive" width="260" height="100">
                             </a>  
                         </li>
                     </ul>
@@ -169,7 +169,7 @@
                      проверить работоспособность покупок. Всякое бывает.</p>               
                     <div class="map">
                         <a class="map" href="#" title="maps" target="blank">                
-                            <img src="img/map.png" width="560" height="222" alt="Карта проезда">
+                            <img src="img/map.jpg" width="560" height="222" alt="Карта проезда">
                         </a>
                     </div>                                    
                     <a class="btn" href="#">НАПИШИТЕ НАМ</a>
