Первая страничка DEVICE
(неоконченная)

--- a/device-catalog.html
+++ b/device-catalog.html
@@ -3,23 +3,22 @@
     <head>
         <title>HTML Academy:DEVICE</title>
         <meta charset="utf-8">  
-        <link href="css/device-style.css" rel="stylesheet">
-        <link href="css/device-normalize.css" rel="stylesheet">       
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">        
+        <link href="css/device-normalize.css" rel="stylesheet">
+        <link href="css/device-style.css" rel="stylesheet">          
     </head>
     <body>
         <div class="container">
             <header class="header catalog">
-                <div class="logo-top">                
+                <div class="logo top secondary">          
                     <a href="device-index.html">DEVICE</a>        
                 </div>
                 <nav class="navigation">
-                    <div class="navigation-top">     
-                        <div class="search">
-                            <form action="#" method="get">        
-                                <input type="search" name="search" placeholder="Поиск по сайту">
-                                <input type="submit" value="Найти">   
-                            </form>    
-                        </div>                             
+                    <div class="navigation-top">                     
+                        <form class="form-search" action="#" method="get">        
+                            <input class="form-search-field" type="search" name="search" placeholder="Поиск по сайту">
+                            <input class="form-submit" type="submit" value="Найти">   
+                        </form>                                      
                         <div class="user-info">
                             <a href="#">Валентин Петухов</a>
                             <a href="#">Выйти</a>                            
@@ -238,10 +237,11 @@
                 </div>
             </main>
         </div>
-        <footer class="footer-catalog">
-            <div class="container">
+
+        <footer class="footer catalog">
+            <div class="footer container">
                 <section class="footer-first-line">                     
-                    <a class="logo-link" href="device-index.html">DEVICE</a>   
+                    <a class="logo bottom link" href="device-index.html">DEVICE</a>   
                     <ul class="footer-navigation-list">
                             <li class="footer-enter">
                                 <a href="#">Выйти</a>
