--- a/device-catalog.html
+++ b/device-catalog.html
@@ -11,7 +11,7 @@
         <div class="container">
             <header class="header catalog">
                 <div class="logo top catalog">         
-                    <a href="device-index.html">DEVICE</a>
+                    <a href="index.html">DEVICE</a>
                 </div>
                 <nav class="navigation">
                     <div class="navigation-top">          
@@ -89,7 +89,7 @@
                 <h1 class="page-title">Моноподы для селфи</h1>
                 <ul class="monopod-breadcrumbs">
                     <li>
-                        <a href="device-index.html">Главная</a>    
+                        <a href="index.html">Главная</a>    
                     </li>
                     <li>
                         <a href="#">Каталог товаров</a>
@@ -104,7 +104,7 @@
                             <p>Фильтр:</p>
                         </div>
                         <div class="filter-left-content">
-                            <form class="filter-monopod" action="#" method="get"> 
+                            <form class="filter-monopod" action="https://echo.htmlacademy.ru" method="get"> 
                                 <div class="filter-type price">
                                     <div class="filter-title range">Стоимость</div>
                                     <div class="range-controls">
@@ -317,7 +317,7 @@
         <footer class="footer catalog">
             <div class="footer container">
                 <section class="footer-first-line">
-                    <a class="logo bottom" href="device-index.html">DEVICE</a>   
+                    <a class="logo bottom" href="index.html">DEVICE</a>   
                     <div class="footer-navigation-list-part1">
                         <div class="footer-navigation-item enter_f">
                             <a href="#">Выйти</a>
@@ -331,7 +331,7 @@
                     </div>  
                 </section>            
                 <section class="footer-second-line">
-                    <p class="addres">г. Москва, ул. Строителей, 15</p>                    
+                    <p>г. Москва, ул. Строителей, 15</p>                    
                     <div class="footer-navigation-list-part2">
                         <div class="footer-navigation-item">
                             <a href="#">ДОСТАВКА</a>
@@ -343,7 +343,7 @@
                             <a href="#">КОНТАКТЫ</a>
                         </div>
                     </div> 
-                    <p class="phone">Тел.: +7 (495) 495-95-95</p>   
+                    <p>Тел.: +7 (495) 495-95-95</p>   
                 </section>                  
             
                 <section class="footer-bottom">
@@ -357,6 +357,6 @@
                     </a>                     
                 </section>
             </div>                               
-        </footer>       
+        </footer>             
     </body>
 </html>
